# myst

./: .clang-format  LICENSE  Makefile  README.md  meson.build
assets/shaders/: cube_fragment.glsl  cube_vertex.glsl  fragment.glsl  light_fragment.glsl
src/: Camera.cpp  Camera.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  main.cpp
src/OpenGL/: GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp
src/Scene/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp
